--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fenix_2",
-  "version": "2.0.0",
+  "name": "tm_appointment_validation",
+  "version": "1.0.0",
   "private": true,
   "description": "<img src=\"./apps/client/public/logos/fenix-ver-naranja-sin-fondo-ok.png\" alt=\"logo-fenix_2\">",
   "main": "index.js",
