--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,29 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 4001",
     "lint": "next lint",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.22.1",
-    "@ant-design/nextjs-registry": "^1.0.2",
-    "@reduxjs/toolkit": "^2.5.0",
-    "antd": "^5.22.7",
-    "next": "^15.1.3",
+    "@ant-design/cssinjs": "^1.21.1",
+    "@ant-design/nextjs-registry": "^1.0.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "antd": "^5.21.2",
+    "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "react-highlight-words": "^0.20.0"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "typescript": "^5"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
+    "typescript": "^5",
+    "@types/react-highlight-words": "^0.20.0"
   }
 }
