--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,21 +13,24 @@
     "@ant-design/cssinjs": "^1.21.1",
     "@ant-design/nextjs-registry": "^1.0.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "antd": "^5.21.2",
     "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-highlight-words": "^0.20.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0",
-    "react-highlight-words": "^0.20.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-highlight-words": "^0.20.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
-    "typescript": "^5",
-    "@types/react-highlight-words": "^0.20.0"
+    "typescript": "^5"
   }
 }
